fix jumping scrollbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -154,6 +154,14 @@ input[type="button"] {
 
 /* Larger than tablet */
 @media (min-width: 750px) {
+
+  /* fix jumping scrollbar when switching
+     from one-screen to long pages */
+  html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
+
   /* Navbar */
   .navbar + .docs-section {
     border-top-width: 0; }
